--- a/lcd_info/package.json
+++ b/lcd_info/package.json
@@ -29,9 +29,10 @@
 		"volumio": ">=3.198.0"
 	},
 	"dependencies": {
+		"coffee-script": "^1.12.7",
 		"fs-extra": "^0.28.0",
+		"i2c": "^0.2.5",
 		"kew": "^0.7.0",
-		"v-conf": "^1.4.0",
-		"i2c": "^0.2.4"
+		"v-conf": "^1.4.0"
 	}
 }
