--- a/lcd_info/package.json
+++ b/lcd_info/package.json
@@ -33,6 +33,7 @@
 		"fs-extra": "^0.28.0",
 		"i2c": "^0.2.5",
 		"kew": "^0.7.0",
-		"v-conf": "^1.4.0"
+		"v-conf": "^1.4.0",
+                "request": "^2.88.1"
 	}
 }
